Updated with resume page

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -61,3 +61,19 @@
     }
 }
 
+
+/************************************************
+   Nav item when max-width:480px;
+*************************************************/
+
+@media screen and (max-width: 480px){
+  nav a{
+    font-weight: 900;
+    font-size: 14px;
+    padding: 1px 1px;
+  }
+
+  header h2{
+    font-size: 18px;
+  }
+}
